11月1日学习日报

--- a/学习日报/11月1日学习日报.md
+++ b/学习日报/11月1日学习日报.md
@@ -55,7 +55,7 @@ tsc -init
 
 # 学习小结
 
-命令：
+常用命令：
 
 tsc       ---编译全部的.ts文件为.js
 
@@ -73,5 +73,5 @@ tsc xxx.ts -w      ---监视xxx.ts文件
 
 # 明日计划
 
-
+看完15集
 
