--- a/学习日报/11月2日学习日报.md
+++ b/学习日报/11月2日学习日报.md
@@ -18,3 +18,22 @@ plugins: [
 
 ```
 
+
+
+2、在贪吃蛇游戏中, 蛇只能左右移动, 无法上下移动 
+
+
+
+# 学习小结
+
+1、学完了typescript, 大致上对它的印象是,主要解决js的弱类型的缺点.
+
+2、以及在做贪吃蛇的游戏中, 明白了断言的使用以及作用, 并自己做了一遍这个小游戏后,也学到了不少较好的逻辑思维,比如如何解决蛇不能双向移动的问题
+
+
+
+
+
+# 明日计划
+
+看js工具库
